--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   http: ^0.13.4
   cupertino_icons: ^1.0.2
   flutter_spinkit: ^5.1.0
+  url_launcher: ^6.0.8
 
 dev_dependencies:
   flutter_test:
