--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_spinkit: ^5.1.0
   url_launcher: ^6.0.8
+  get_it: ^7.2.0
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
