--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   url_launcher: ^6.0.8
   get_it: ^7.2.0
   provider: ^6.0.1
+  cached_network_image: ^3.2.0
+  hive: ^2.0.4
 
 dev_dependencies:
   flutter_test:
