--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,14 @@ dependencies:
   provider: ^6.0.1
   cached_network_image: ^3.2.0
   hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  flutter_slidable: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^1.1.1
+  build_runner: ^2.1.5
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
