--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: fooder
+name: food_treasure
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -45,6 +45,11 @@ dev_dependencies:
     sdk: flutter
   hive_generator: ^1.1.1
   build_runner: ^2.1.5
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  image_path: "assets/app-icon.png"
+  android: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
